--- a/pages/projects.html
+++ b/pages/projects.html
@@ -166,7 +166,7 @@
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
                                 <h5 class="card-title mbr-fonts-style display-5" style="text-align:left;">
-                                    <strong>corkino</strong></h5>
+                                    <strong>Cafe OTO - Acoustic Analysis of the Environment</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4" style="text-align:justify;">Ultra-portable all-in-one MaxMSP controller<br></p>
                                 <div class="mbr-section-btn"><a href="https://www.gabrielavelitch.com/pages/projects/corkino.html" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </div>
 </section>
