--- a/pages/learn.html
+++ b/pages/learn.html
@@ -437,7 +437,7 @@
                               <div class="item features-image сol-12 col-md-6 col-lg-3">
                                 <div class="item-wrapper">
                                   <div class="item-img">
-                                    <img src="https://www.gabrielavelitch.com/img/site/cartridge.webp" data-slide-to="3" data-bs-slide-to="3">
+                                    <img src="https://www.gabrielavelitch.com/img/site/solo.webp" data-slide-to="3" data-bs-slide-to="3">
                                   </div>
                                   <div class="item-content">
                                     <h5 class="item-title mbr-fonts-style display-7">
