--- a/pages/learn/cartridge_music_john_cage.html
+++ b/pages/learn/cartridge_music_john_cage.html
@@ -120,8 +120,8 @@
               <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/05_01_cartridge_music_by_federico_scalas.html" target="_blank"><b>05.01. Cartridge Music by Federico Scalas</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/05_02_cartridge_music_by_elena_dalo.html" target="_blank"><b>05.02. Cartridge Music by Elena D'Alò</b></a></li>
               <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/05_03_cartridge_music_by_giuseppe_silvi.html" target="_blank"><b>05.03. Cartridge Music by Giuseppe Silvi</b></a></li>
-          </ul>
-          </p>
+            </ul>
+            </p>
         </div>
       </div>
     </div>
@@ -138,7 +138,8 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><b>(1968-70) - Mario Bertoncini: </b><a href="http://www.mariobertoncini.com/all/slides/1968-69_cartridge_music.html" target="_blank"><b>photo</b></a>, <a href="https://www.discogs.com/it/release/556053-Mario-Bertoncini-Earle-Brown-John-Cage-Cifre-Four-Systems-Cartridge-Music" target="_blank"><b>vinyl</b></a></li>
+            <li><b>(1968-70) - Mario Bertoncini: </b><a href="http://www.mariobertoncini.com/all/slides/1968-69_cartridge_music.html" target="_blank"><b>photo</b></a>, <a
+                href="https://www.discogs.com/it/release/556053-Mario-Bertoncini-Earle-Brown-John-Cage-Cifre-Four-Systems-Cartridge-Music" target="_blank"><b>vinyl</b></a></li>
             <li><b>(2016) - John Cage Musicircus, Town Hall, Seattle: </b><a href="https://www.youtube.com/watch?v=qoRPaWhovEc" target="_blank"><b>preparation video</b></a></li>
             <li><b>(2014) - Langham Research Centre: </b><a href="https://www.youtube.com/watch?v=VaNHAswN2hU&t=8s" target="_blank"><b>performance video</b></a></li>
             <li><b>(2010) - John Cage 100th Anniversary Countdown: </b><a href="https://www.youtube.com/watch?v=Shm76pD81og" target="_blank"><b>performance video</b></a></li>
