--- a/pages/learn/karlheinz_stockhausen_solo.html
+++ b/pages/learn/karlheinz_stockhausen_solo.html
@@ -104,7 +104,7 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/cartridge_music_john_cage/01_00_introduzione.html" target="_blank"><b>01. Introduzione</b></a></li>
+            <li><a href="" target="_blank"><b>01. Introduzione</b></a></li>
           </ul>
           </p>
         </div>
