--- a/pages/learn/karlheinz_stockhausen_solo.html
+++ b/pages/learn/karlheinz_stockhausen_solo.html
@@ -123,7 +123,7 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><b>(2012) - John Cage 100th Anniversary Countdown: </b><a href="https://www.youtube.com/watch?v=bHY0vRM8qKI" target="_blank"><b>performance video</b></a></li>
+            <li><b>(2010) - Jason Alder, bass clarinet: </b><a href="https://www.youtube.com/watch?v=RlUdIaNLnCU" target="_blank"><b>performance video</b></a></li>
           </ul>
           </p>
         </div>
