--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -90,8 +90,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
-          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
-          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Caos Deterministico</strong></h4>
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Karlheinz Stockhausen - SOLO</h3>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>SOLO - Score Builder Manual</strong></h4>
         </div>
       </div>
     </div>
@@ -106,28 +106,26 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            <b>Caos Deterministico:</b> descrive e modellizza sistemi i cui parametri variano in base a leggi deterministiche, ma i cui valori non sembrano presentare in apparenza un modello deterministico. Esso sembra non avere legami fra i vari
-            valori.
-            <br>
-            <br>
-            Ci si aspetta che, una volta scritte le equazioni differenziali che regolano l'evoluzione temporale di un fenomeno, e impostate le condizioni iniziali, si possano risolvere le equazioni stesse e pervenire a una completa conoscenza del
-            sistema, per ogni istante di tempo successivo. Ad esempio la traiettoria oscillatoria di un pendolo (comportamento del sistema nel tempo) o di un oscillatore armonico è perfettamente determinata dall’equazione differenziale che lega
-            l’accelerazione del sistema alla sua velocità e al suo spostamento. (vedi corso sui modelli fisici).
-            <br>
-            <br>
-            Ci sono sistemi che invece modificano il loro comportamento in base alle condizioni iniziali (sensibilità dalle condizioni iniziali), nonostante siano perfettamente individuate le equazioni differenziali che descrivono il sistema. Nel
-            corso sui modelli fisici abbiamo visto due sistemi di equazioni differenziali che evidenziano nello spazio delle fasi l’attrattore di Lorenz e l’attrattore di Rossler (vedi corso sui modelli fisici).
-            <br>
-            <br>
-            Un sistema è detto caotico, se è caratterizzato da una forte dipendenza dalle condizioni iniziali: se lo stato di partenza di un sistema con tali proprietà è modificato anche di poco, si possono produrre effetti molto rilevanti nello
-            stato di arrivo.
+
           </p>
         </div>
       </div>
     </div>
   </section>
 
-
+  <!-- Image-->
+        <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-5">
+                        <div class="image-wrapper">
+                            <img src="https://www.gabrielavelitch.com/img/karlheinz_stockhausen_solo/solo_patch_1.webp" alt="www.gabrielavelitch.com">
+                            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Formschema instructions</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
