--- a/pages/learn/karlheinz_stockhausen_solo.html
+++ b/pages/learn/karlheinz_stockhausen_solo.html
@@ -143,7 +143,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
             <li><a href="https://www.gabrielavelitch.com/downloads/scores/karlheinz_stockhausen_solo.pdf" target="_blank"><b>Solo Music Score</b></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/tools/maxmsp/Stockhausen_SOLO_patch/SOLO_Score_Builder.zip" target="_blank"><b>Solo Score Bulider MaxMSP patch</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/tools/maxmsp/Stockhausen_SOLO_patch/SOLO_Score_Builder.zip" target="_blank"><b>Solo Score Builder MaxMSP patch</b></a></li>
           </ul>
           </p>
         </div>
