--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -114,18 +114,136 @@
   </section>
 
   <!-- Image-->
-        <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-12 col-lg-5">
-                        <div class="image-wrapper">
-                            <img src="https://www.gabrielavelitch.com/img/karlheinz_stockhausen_solo/solo_patch_1.webp" alt="www.gabrielavelitch.com">
-                            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Formschema instructions</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/karlheinz_stockhausen_solo/solo_patch_1.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Formschema instructions</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Table-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Country</th>
+                <th scope="col">Genre</th>
+                <th scope="col">Instrumentation/Environment</th>
+                <th scope="col">Title</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Japan</td>
+                <td>Gagaku court music</td>
+                <td>Ryuteki (flute), hichiriki (reeds), sho (harmonium), drums, etc..</td>
+                <td>"Etenraku"</td>
+              </tr>
+              <tr>
+                <td>Japan</td>
+                <td>Kabuki dance</td>
+                <td>Matsuri Bayashi ensemble: plucked string, flute, perc</td>
+                <td>"Yasai Aikata"</td>
+              </tr>
+              <tr>
+                <td>Japan</td>
+                <td>Shinto dance</td>
+                <td>Aoi Matsuri Festival</td>
+                <td>"Daidai Kagura"</td>
+              </tr>
+              <tr>
+                <td>Japan</td>
+                <td>Noh theater music</td>
+                <td>percussion (ōtsuzumi) w., M/F vocal, flute</td>
+                <td>"Hashi Benkei"</td>
+              </tr>
+              <tr>
+                <td>Japan</td>
+                <td>Temple chant</td>
+                <td>Buddhist temple chants Koyasan Temple</td>
+                <td>"Senbotsusha Irei Heiwa Kigan Daihoyoh ceremony", "Shingon-Shu ceremony"</td>
+              </tr>
+              <tr>
+                <td>Japan</td>
+                <td>Temple chant</td>
+                <td>from gyōdō procession, circular walking chant w., wooden shoes, Yakushiji Temple</td>
+                <td>"Jion-e"</td>
+              </tr>
+              <tr>
+                <td>Japan</td>
+                <td>Conch music</td>
+                <td>Omizutori Festival, Nara field recordings</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Bali</td>
+                <td>Gamelan orchestra</td>
+                <td>rhythmic metallic and wood percussion</td>
+                <td>"Baris Bapan"</td>
+              </tr>
+              <tr>
+                <td>Vietman</td>
+                <td>Music of the Montagnards</td>
+                <td>female voice, bamboo flutes, gamelan-like</td>
+                <td>"Song of the Festival of Love", "Concert of Bamboo Whistles", "Air de Gongs"</td>
+              </tr>
+              <tr>
+                <td>China</td>
+                <td>Peking opera</td>
+                <td>Chinese flute and orchestra: flute, strings, fast percussion</td>
+                <td>"Keihosau"</td>
+              </tr>
+              <tr>
+                <td>Spain</td>
+                <td>Flamenco</td>
+                <td>guitar, castanets, rattles, male singing</td>
+                <td>"Sevillanas"</td>
+              </tr>
+              <tr>
+                <td>Hungary</td>
+                <td>Hungarian folk song</td>
+                <td>children's song for violin, fast rhythmic drum tom</td>
+                <td>"Pista Bácsi, János Bácsi"</td>
+              </tr>
+              <tr>
+                <td>Africa</td>
+                <td>South Saharan song</td>
+                <td>kalimba-like percussion w., group singing</td>
+                <td>"Ibani-Sansa"</td>
+              </tr>
+              <tr>
+                <td>Amazon South America</td>
+                <td>Shipibo Indians song</td>
+                <td>drums, ringing, blowpipes, girls exclamations</td>
+                <td>"Dance for Adolescent Girls"</td>
+              </tr>
+              <tr>
+                <td>Amazon South America</td>
+                <td>Javahé Indians song</td>
+                <td>girls, panflutes, rattles, perc.</td>
+                <td>"Lullaby"</td>
+              </tr>
+              <tr>
+                <td>Amazon South America</td>
+                <td>Suyá Indians song</td>
+                <td>low men's choir w rattles</td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
