--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -141,16 +141,16 @@
             </thead>
             <tbody>
               <tr>
-                <td>Japan</td>
-                <td>Gagaku court music</td>
+                <td>FORMSCHEMA VERSION</td>
+                <td>use the dropdown menu to choose a formschema (I, II, III, IV, V, VI).</td>
               </tr>
               <tr>
-                <td>Japan</td>
-                <td>Kabuki dance</td>
+                <td>CYCLES</td>
+                <td>select the cycle you want to analyse.</td>
               </tr>
               <tr>
-                <td>Japan</td>
-                <td>Shinto dance</td>
+                <td>SECONDS</td>
+                <td>period duration in seconds.</td>
               </tr>
             </tbody>
           </table>
