--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -152,6 +152,46 @@
                 <td>SECONDS</td>
                 <td>period duration in seconds.</td>
               </tr>
+              <tr>
+                <td>PERIODS</td>
+                <td>periods in a cycle</td>
+              </tr>
+              <tr>
+                <td>PAUSE BPM</td>
+                <td>bpm values for pauses</td>
+              </tr>
+              <tr>
+                <td>BPM</td>
+                <td>bpm value for notes</td>
+              </tr>
+              <tr>
+                <td>BEATS</td>
+                <td>beats in a period</td>
+              </tr>
+              <tr>
+                <td>COMPARE</td>
+                <td>shows which cycle to compare</td>
+              </tr>
+              <tr>
+                <td>MATERIAL</td>
+                <td>shows which material to choose</td>
+              </tr>
+              <tr>
+                <td>CRITERIA</td>
+                <td>shows the used criteria</td>
+              </tr>
+              <tr>
+                <td>PAUSES</td>
+                <td>durations for pauses</td>
+              </tr>
+              <tr>
+                <td>STRUCTURE</td>
+                <td>shows which kind of structure to use</td>
+              </tr>
+              <tr>
+                <td>NOTES</td>
+                <td>notes</td>
+              </tr>
             </tbody>
           </table>
         </div>
