--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -142,11 +142,15 @@
             <tbody>
               <tr>
                 <td>FORMSCHEMA VERSION</td>
-                <td>use the dropdown menu to choose a formschema (I, II, III, IV, V, VI).</td>
+                <td>use the dropdown menu to choose a formschema (I, II, III, IV, V, VI)</td>
+              </tr>
+              <tr>
+                <td>TOTAL TIME</td>
+                <td>total time of the formschema</td>
               </tr>
               <tr>
                 <td>CYCLES</td>
-                <td>select the cycle you want to analyse.</td>
+                <td>select the cycle you want to analyse</td>
               </tr>
               <tr>
                 <td>PERIODS</td>
