--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -150,7 +150,7 @@
               </tr>
               <tr>
                 <td>CYCLES</td>
-                <td>select the cycle you want to analyse</td>
+                <td>click to select the cycle you want to analyse</td>
               </tr>
               <tr>
                 <td>PERIODS</td>
