--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -210,7 +210,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/karlheinz_stockhausen_solo/solo_patch_2.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Formschema instructions</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Pages comparator</p>
           </div>
         </div>
       </div>
@@ -224,7 +224,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/karlheinz_stockhausen_solo/solo_patch_3.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Formschema instructions</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Material chooser</p>
           </div>
         </div>
       </div>
