--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -217,6 +217,47 @@
     </div>
   </section>
 
+  <!-- Table-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Item</th>
+                <th scope="col">Description</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>TIMBRE N</td>
+                <td>natural timbre, no effect</td>
+              </tr>
+              <tr>
+                <td>TIMBRE I</td>
+                <td>chosen timbre I</td>
+              </tr>
+              <tr>
+                <td>TIMBRE II</td>
+                <td>chosen timbre II</td>
+              </tr>
+              <tr>
+                <td>TIMBRE III</td>
+                <td>chosen timbre III</td>
+              </tr>
+              <tr>
+                <td>NOTES</td>
+                <td>notes</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <!-- Image-->
   <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
     <div class="container-fluid">
