--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -247,7 +247,87 @@
                 <td>chosen timbre III</td>
               </tr>
               <tr>
-                <td>NOTES</td>
+                <td>TIMBRE VARIETY</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>LOW PITCH</td>
+                <td>Notes in the register x <= E (329.63 Hz)</td>
+              </tr>
+              <tr>
+                <td>MIDDLE PITCH</td>
+                <td>Notes in the register E (329.63 Hz) < x <= F (698.46 Hz)</td>
+              </tr>
+              <tr>
+                <td>HIGH PITCH</td>
+                <td>Notes in the register x > F (698.46 Hz)</td>
+              </tr>
+              <tr>
+                <td>GRACE</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>PITCH ALTER</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>FLUTTER</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>LEGATO</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>ACCENT</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>P DYNAMIC</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>M DYNAMIC</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>P DYNAMIC</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>DIM - CRE</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>SOMEWHAT</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>NOISY</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>VERY NOISY</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>ACCEL</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>RIT</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>PERIOD</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>TONE</td>
+                <td>notes</td>
+              </tr>
+              <tr>
+                <td>GRUPPEN</td>
                 <td>notes</td>
               </tr>
             </tbody>
