--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -264,11 +264,11 @@
               </tr>
               <tr>
                 <td>GRACE</td>
-                <td>notes</td>
+                <td>Grace notes</td>
               </tr>
               <tr>
                 <td>PITCH ALTER</td>
-                <td>notes</td>
+                <td>Glissando, vibrato</td>
               </tr>
               <tr>
                 <td>FLUTTER</td>
