--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -272,31 +272,31 @@
               </tr>
               <tr>
                 <td>FLUTTER</td>
-                <td>notes</td>
+                <td>Flutter</td>
               </tr>
               <tr>
                 <td>LEGATO</td>
-                <td>notes</td>
+                <td>Legato</td>
               </tr>
               <tr>
                 <td>ACCENT</td>
-                <td>notes</td>
+                <td>Accent</td>
               </tr>
               <tr>
                 <td>P DYNAMIC</td>
-                <td>notes</td>
+                <td>All p dynamics</td>
               </tr>
               <tr>
                 <td>M DYNAMIC</td>
-                <td>notes</td>
+                <td>Moderate dynamic</td>
               </tr>
               <tr>
-                <td>P DYNAMIC</td>
-                <td>notes</td>
+                <td>F DYNAMIC</td>
+                <td>All f dynamics</td>
               </tr>
               <tr>
                 <td>DIM - CRE</td>
-                <td>notes</td>
+                <td>Diminuendo, crescendo</td>
               </tr>
               <tr>
                 <td>SOMEWHAT</td>
