--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -300,23 +300,23 @@
               </tr>
               <tr>
                 <td>SOMEWHAT</td>
-                <td>notes</td>
+                <td>Somewhat noisy: noise coloration</td>
               </tr>
               <tr>
                 <td>NOISY</td>
-                <td>notes</td>
+                <td>Noisy: noise coloration</td>
               </tr>
               <tr>
                 <td>VERY NOISY</td>
-                <td>notes</td>
+                <td>Very noisy: noise coloration</td>
               </tr>
               <tr>
                 <td>ACCEL</td>
-                <td>notes</td>
+                <td>Accellerando</td>
               </tr>
               <tr>
                 <td>RIT</td>
-                <td>notes</td>
+                <td>Ritardando</td>
               </tr>
               <tr>
                 <td>PERIOD</td>
@@ -324,11 +324,11 @@
               </tr>
               <tr>
                 <td>TONE</td>
-                <td>notes</td>
+                <td>Single tones or groups of notes in immediate proximity</td>
               </tr>
               <tr>
                 <td>GRUPPEN</td>
-                <td>notes</td>
+                <td>Groups of notes with pitch variety</td>
               </tr>
             </tbody>
           </table>
