--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -248,7 +248,7 @@
               </tr>
               <tr>
                 <td>TIMBRE VARIETY</td>
-                <td>notes</td>
+                <td>Timbre variety within a page</td>
               </tr>
               <tr>
                 <td>LOW PITCH</td>
