--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -248,75 +248,75 @@
               </tr>
               <tr>
                 <td>TIMBRE VARIETY</td>
-                <td>Timbre variety within a page</td>
+                <td>timbre variety within a page</td>
               </tr>
               <tr>
                 <td>LOW PITCH</td>
-                <td>Notes in the register x <= E (329.63 Hz)</td>
+                <td>notes in the register x <= E (329.63 Hz)</td>
               </tr>
               <tr>
                 <td>MIDDLE PITCH</td>
-                <td>Notes in the register E (329.63 Hz) < x <= F (698.46 Hz)</td>
+                <td>notes in the register E (329.63 Hz) < x <= F (698.46 Hz)</td>
               </tr>
               <tr>
                 <td>HIGH PITCH</td>
-                <td>Notes in the register x > F (698.46 Hz)</td>
+                <td>notes in the register x > F (698.46 Hz)</td>
               </tr>
               <tr>
                 <td>GRACE</td>
-                <td>Grace notes</td>
+                <td>grace notes</td>
               </tr>
               <tr>
                 <td>PITCH ALTER</td>
-                <td>Glissando, vibrato</td>
+                <td>glissando, vibrato</td>
               </tr>
               <tr>
                 <td>FLUTTER</td>
-                <td>Flutter</td>
+                <td>flutter</td>
               </tr>
               <tr>
                 <td>LEGATO</td>
-                <td>Legato</td>
+                <td>legato</td>
               </tr>
               <tr>
                 <td>ACCENT</td>
-                <td>Accent</td>
+                <td>accent</td>
               </tr>
               <tr>
                 <td>P DYNAMIC</td>
-                <td>All p dynamics</td>
+                <td>all p dynamics</td>
               </tr>
               <tr>
                 <td>M DYNAMIC</td>
-                <td>Moderate dynamic</td>
+                <td>moderate dynamic</td>
               </tr>
               <tr>
                 <td>F DYNAMIC</td>
-                <td>All f dynamics</td>
+                <td>all f dynamics</td>
               </tr>
               <tr>
                 <td>DIM - CRE</td>
-                <td>Diminuendo, crescendo</td>
+                <td>dminuendo, crescendo</td>
               </tr>
               <tr>
                 <td>SOMEWHAT</td>
-                <td>Somewhat noisy: noise coloration</td>
+                <td>somewhat noisy: noise coloration</td>
               </tr>
               <tr>
                 <td>NOISY</td>
-                <td>Noisy: noise coloration</td>
+                <td>noisy: noise coloration</td>
               </tr>
               <tr>
                 <td>VERY NOISY</td>
-                <td>Very noisy: noise coloration</td>
+                <td>very noisy: noise coloration</td>
               </tr>
               <tr>
                 <td>ACCEL</td>
-                <td>Accellerando</td>
+                <td>accellerando</td>
               </tr>
               <tr>
                 <td>RIT</td>
-                <td>Ritardando</td>
+                <td>ritardando</td>
               </tr>
               <tr>
                 <td>PERIOD</td>
@@ -324,11 +324,11 @@
               </tr>
               <tr>
                 <td>TONE</td>
-                <td>Single tones or groups of notes in immediate proximity</td>
+                <td>single tones or groups of notes in immediate proximity</td>
               </tr>
               <tr>
                 <td>GRUPPEN</td>
-                <td>Groups of notes with pitch variety</td>
+                <td>groups of notes with pitch variety</td>
               </tr>
             </tbody>
           </table>
