--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -320,7 +320,7 @@
               </tr>
               <tr>
                 <td>PERIOD</td>
-                <td>notes</td>
+                <td>periodic</td>
               </tr>
               <tr>
                 <td>TONE</td>
