--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -99,12 +99,13 @@
 
 
   <!-- Text-->
-
-
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-8">
+        <div class="col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+            <strong>FORMSCHEMA INSTRUCTIONS</strong>
+          </h4>
           <p class="mbr-text mbr-fonts-style display-7">
 
           </p>
@@ -202,6 +203,23 @@
       </div>
     </div>
   </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+            <strong>PAGES COMPARATOR</strong>
+          </h4>
+          <p class="mbr-text mbr-fonts-style display-7">
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- Image-->
   <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
@@ -332,6 +350,22 @@
               </tr>
             </tbody>
           </table>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+            <strong>MATERIAL CHOOSER</strong>
+          </h4>
+          <p class="mbr-text mbr-fonts-style display-7">
+
+          </p>
         </div>
       </div>
     </div>
