--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -120,13 +120,30 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/karlheinz_stockhausen_solo/solo_patch_1.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Formschema instructions</p>
+            <img src="https://www.gabrielavelitch.com/img/karlheinz_stockhausen_solo/formschema/formschema_v5.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Formschema version V</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/karlheinz_stockhausen_solo/solo_patch_1.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Formschema instructions version V</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <!-- Table-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
