--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -97,6 +97,21 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+            <strong>INTRODUCTION</strong>
+          </h4>
+          <p class="mbr-text mbr-fonts-style display-7">
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
