--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -106,7 +106,8 @@
             <strong>INTRODUCTION</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
-
+            This Max MSP patch is designed to help create one's own version of Stockhausen's Solo score. By using this patch, the time required to produce the score is drastically reduced, allowing for greater focus on the creative aspects rather
+            than the logical or computational components.
           </p>
         </div>
       </div>
@@ -306,7 +307,7 @@
               </tr>
               <tr>
                 <td>MIDDLE PITCH</td>
-                <td>notes in the register E (329.63 Hz) < x <= F (698.46 Hz)</td>
+                <td>notes in the register E (329.63 Hz) < x <=F (698.46 Hz)</td>
               </tr>
               <tr>
                 <td>HIGH PITCH</td>
