--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -108,6 +108,9 @@
           <p class="mbr-text mbr-fonts-style display-7">
             This Max MSP patch is designed to help create one's own version of Stockhausen's Solo score. By using this patch, the time required to produce the score is drastically reduced, allowing for greater focus on the creative aspects rather
             than the logical or computational components.
+            <br>
+            <br>
+            The Max MSP patch has been designed to simplify the process of creating the score, allowing you to save time and increase efficiency. Thanks to this technological solution, musicians can focus on artistic choices, rhythmic variations, sound usage, and note organization, rather than the mathematical operations required to calculate timing, pauses, and effects.
           </p>
         </div>
       </div>
