--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -110,7 +110,15 @@
             than the logical or computational components.
             <br>
             <br>
-            The Max MSP patch has been designed to simplify the process of creating the score, allowing you to save time and increase efficiency. Thanks to this technological solution, musicians can focus on artistic choices, rhythmic variations, sound usage, and note organization, rather than the mathematical operations required to calculate timing, pauses, and effects.
+            The Max MSP patch has been designed to simplify the process of creating the score, allowing you to save time and increase efficiency. Thanks to this technological solution, musicians can focus on artistic choices, rhythmic variations,
+            sound usage, and note organization, rather than the mathematical operations required to calculate timing, pauses, and effects.
+            <br>
+            <br>
+            This patch requires <a href="https://cycling74.com/downloads" target="_blank"><b>Max MSP</b></a> to be preinstalled on your computer.
+            <br>
+          <ul>
+            <li></li>
+          </ul>
           </p>
         </div>
       </div>
