--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -117,7 +117,7 @@
             This patch requires <a href="https://cycling74.com/downloads" target="_blank"><b>Max MSP</b></a> to be preinstalled on your computer.
             <br>
           <ul>
-            <li></li>
+            <li>1. Download the <a href="https://www.gabrielavelitch.com/downloads/tools/maxmsp/Stockhausen_SOLO_patch/SOLO_Score_Builder.zip" target="_blank"><b>Solo Score Builder MaxMSP patch</b></a></li>
           </ul>
           </p>
         </div>
