--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -118,6 +118,7 @@
             <br>
           <ul>
             <li>1. Download the <a href="https://www.gabrielavelitch.com/downloads/tools/maxmsp/Stockhausen_SOLO_patch/SOLO_Score_Builder.zip" target="_blank"><b>Solo Score Builder MaxMSP patch</b></a></li>
+            <li>Unzip and open the MAIN.maxpat</li>
           </ul>
           </p>
         </div>
