--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -136,7 +136,16 @@
             <strong>FORMSCHEMA INSTRUCTIONS</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
-
+            The "Formschema instructions" section is where you can find all the instructions for writing your own version of the score. Before starting, it is essential to have read the instructions provided by Stockhausen in the introduction of the
+            <a href="https://www.gabrielavelitch.com/downloads/scores/karlheinz_stockhausen_solo.pdf" target="_blank"><b>original score</b></a>.
+            <br>
+            <br>
+            This section provides a detailed guide on how to structure the score and how to notate the various elements of the composition. It is important to follow these instructions carefully in order to accurately represent the composer's
+            intentions.
+            <br>
+            <br>
+            Moreover, it is recommended to have a good understanding of Stockhausen's style and compositional techniques in order to fully appreciate the complexity of the score and create a faithful rendition of it. By combining the instructions
+            from the "Formschema" section with your own creative input, you can create a unique and personal interpretation of the Solo score that pays homage to Stockhausen's innovative approach to contemporary music.
           </p>
         </div>
       </div>
