--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -117,9 +117,9 @@
             This patch requires <a href="https://cycling74.com/downloads" target="_blank"><b>Max MSP</b></a> to be preinstalled on your computer.
             <br>
           <ul>
-            <li>1. Download the <a href="https://www.gabrielavelitch.com/downloads/tools/maxmsp/Stockhausen_SOLO_patch/SOLO_Score_Builder.zip" target="_blank"><b>Solo Score Builder MaxMSP patch</b></a></li>
-            <li>2. Unzip</li>
-            <li>3. Open the MAIN.maxpat, the process may take several minutes</li>
+            <ol>Download the <a href="https://www.gabrielavelitch.com/downloads/tools/maxmsp/Stockhausen_SOLO_patch/SOLO_Score_Builder.zip" target="_blank"><b>Solo Score Builder MaxMSP patch</b></a></ol>
+            <ol>Unzip</ol>
+            <ol>Open the MAIN.maxpat, the process may take several minutes</ol>
           </ul>
           </p>
         </div>
