--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -166,6 +166,26 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+            <strong>FORMSCHEMA INSTRUCTIONS</strong>
+          </h4>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Through the dropdown menu located next to the text "FORMSCHEMA VERSION", you can select the version you wish to perform. Once you have chosen the version, the system will process the instructions to be followed (this process may take a
+            few seconds).
+            <br>
+            <br>
+            The dropdown menu provides a convenient and user-friendly way to switch between different versions and compare them, allowing you to explore the full range of possibilities offered by the Solo score. By selecting different versions and
+            experimenting with your own variations, you can gain a deeper understanding of the score and develop your own unique approach to performing it.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Image-->
   <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
