--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -136,7 +136,7 @@
             <strong>FORMSCHEMA INSTRUCTIONS</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
-            The "Formschema instructions" section is where you can find all the instructions for writing your own version of the score. Before starting, it is essential to have read the instructions provided by Stockhausen in the introduction of the
+            The "Formschema Instructions" section is where you can find all the instructions for writing your own version of the score. Before starting, it is essential to have read the instructions provided by Stockhausen in the introduction of the
             <a href="https://www.gabrielavelitch.com/downloads/scores/karlheinz_stockhausen_solo.pdf" target="_blank"><b>original score</b></a>.
             <br>
             <br>
