--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -175,12 +175,20 @@
             <strong>FORMSCHEMA INSTRUCTIONS</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
-            Through the dropdown menu located next to the text "FORMSCHEMA VERSION", you can select the version you wish to perform (I, II, III, IV, V, VI). Once you have chosen the version, the system will process the instructions to be followed (this process may take a
+            Through the dropdown menu located next to the text "FORMSCHEMA VERSION", you can select the version you wish to perform (I, II, III, IV, V, VI). Once you have chosen the version, the system will process the instructions to be followed
+            (this process may take a
             few seconds).
             <br>
             <br>
             The dropdown menu provides a convenient and user-friendly way to switch between different versions and compare them, allowing you to explore the full range of possibilities offered by the Solo score. By selecting different versions and
             experimenting with your own variations, you can gain a deeper understanding of the score and develop your own unique approach to performing it.
+            <br>
+            <br>
+            By clicking on the buttons A, B, C, D, E, F, you can select the cycle you are currently analyzing. This process will trigger the recalculation of the chosen material and display it in the "chosen material" section (this may take a few
+            seconds).
+            <br>
+            <br>
+            The buttons A, B, C, D, E, F correspond to different cycles within the score, and by selecting them, you can focus on specific sections of the composition and analyze their structure and characteristics in more detail.
           </p>
         </div>
       </div>
