--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -172,9 +172,11 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
           <p class="mbr-text mbr-fonts-style display-7">
+            The "Formschema Instructions" section, in addition to reporting all the instructions of the "Formschema" from the original score, also includes the values of BPMs for notes and pauses, which is an essential aspect for managing tempo.
+            <br>
+            <br>
             Through the dropdown menu located next to the text "FORMSCHEMA VERSION", you can select the version you wish to perform (I, II, III, IV, V, VI). Once you have chosen the version, the system will process the instructions to be followed
-            (this process may take a
-            few seconds).
+            (this process may take a few seconds).
           </p>
         </div>
       </div>
@@ -201,9 +203,6 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
           <p class="mbr-text mbr-fonts-style display-7">
-            The "Formschema Instructions" section, in addition to reporting all the instructions of the "Formschema" from the original score, also includes the values of BPMs for notes and pauses, which is an essential aspect for managing tempo.
-            <br>
-            <br>
             The dropdown menu provides a convenient and user-friendly way to switch between different versions and compare them, allowing you to explore the full range of possibilities offered by the Solo score. By selecting different versions and
             experimenting with your own variations, you can gain a deeper understanding of the score and develop your own unique approach to performing it.
             <br>
