--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -207,7 +207,7 @@
             experimenting with your own variations, you can gain a deeper understanding of the score and develop your own unique approach to performing it.
             <br>
             <br>
-            By clicking on the buttons A, B, C, D, E, F, you can select the cycle you are currently analyzing. This process will trigger the recalculation of the chosen material and display it in the "chosen material" section (this may take a few
+            By clicking on the buttons A, B, C, D, E, F, you can select the cycle you are currently analyzing. This process will trigger the recalculation of the chosen material and display it in the "Material Chooser" section (this may take a few
             seconds).
             <br>
             <br>
