--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -212,6 +212,9 @@
             <br>
             <br>
             The buttons A, B, C, D, E, F correspond to different cycles within the score, and by selecting them, you can focus on specific sections of the composition and analyze their structure and characteristics in more detail.
+            <br>
+            <br>
+            For the description of the instructions, please refer to the "PREPARATION OF A VERSION" paragraph in the original score.
           </p>
         </div>
       </div>
