--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -306,7 +306,13 @@
             <strong>PAGES COMPARATOR</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
-
+            The "Pages Comparator" section displays the percentage values of some of the most significant characteristics of the musical material.
+            <br>
+            <br>
+            By comparing the percentages of different cycles or versions, musicians can gain insights into the structure and evolution of the Solo score, as well as identify patterns and relationships between different sections.
+            <br>
+            <br>
+            The Pages Comparator provides a powerful tool for analyzing and interpreting the score, and can help musicians develop a deeper understanding of its complex and innovative structure.
           </p>
         </div>
       </div>
