--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -214,7 +214,7 @@
             The buttons A, B, C, D, E, F correspond to different cycles within the score, and by selecting them, you can focus on specific sections of the composition and analyze their structure and characteristics in more detail.
             <br>
             <br>
-            For the description of the instructions, please refer to the "PREPARATION OF A VERSION" paragraph in the original score.
+            For the description of the instructions, refer to the "PREPARATION OF A VERSION" paragraph in the original score.
           </p>
         </div>
       </div>
@@ -312,7 +312,10 @@
             By comparing the percentages of different cycles or versions, musicians can gain insights into the structure and evolution of the Solo score, as well as identify patterns and relationships between different sections.
             <br>
             <br>
-            The Pages Comparator provides a powerful tool for analyzing and interpreting the score, and can help musicians develop a deeper understanding of its complex and innovative structure.
+            The Pages Comparator is a powerful tool for analyzing and interpreting the score, and can help musicians develop a deeper understanding of its complex and innovative structure.
+            <br>
+            <br>
+            By clicking on the "Pages Order" button, the system will generate a new random sequence from 1 to 6 (this process may take a few seconds). This process will also refresh the "Material Chooser" section.
           </p>
         </div>
       </div>
