--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -315,7 +315,7 @@
             The Pages Comparator is a powerful tool for analyzing and interpreting the score, and can help musicians develop a deeper understanding of its complex and innovative structure.
             <br>
             <br>
-            By clicking on the "Pages Order" button, the system will generate a new random sequence from 1 to 6 (this process may take a few seconds). This process will also refresh the "Material Chooser" section.
+            By clicking on the "PAGES ORDER" button, the system will generate a new random sequence from 1 to 6 (this process may take a few seconds). This process will also refresh the "Material Chooser" section.
           </p>
         </div>
       </div>
