--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -466,8 +466,8 @@
             <strong>MATERIAL CHOOSER</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
-            The "Material Chooser" section is divided into three sections: Elements, Parts, and Systems. Each section displays the selected musical material, which is expressed through a number that is associated with the material itself. The tables
-            that provide the association between the material and its label can only be found in the SOLO_Score_Builder/pages_material/ folder.
+            The "Material Chooser" section is divided into three sections: Elements, Parts, and Systems. Each section displays the selected musical material, which is expressed through a number that is associated with the material itself. The charts
+            that provide the association between the material and its numeric label can be found in the SOLO_Score_Builder/pages_material/ folder.
           </p>
         </div>
       </div>
