--- a/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
+++ b/pages/learn/karlheinz_stockhausen_solo/SOLO_score_builder_manual.html
@@ -468,6 +468,9 @@
           <p class="mbr-text mbr-fonts-style display-7">
             The "Material Chooser" section is divided into three sections: Elements, Parts, and Systems. Each section displays the selected musical material, which is expressed through a number that is associated with the material itself. The charts
             that provide the association between the material and its numeric label can be found in the SOLO_Score_Builder/pages_material/ folder.
+            <br>
+            <br>
+            The number next to each section represents the percentage of coherence with the comparison instructions provided by the Formschema. This number can be changed to adjust the selection of material to one's liking.
           </p>
         </div>
       </div>
